Updated environment files

--- a/.env
+++ b/.env
@@ -1,16 +1,18 @@
 # This file defines variables common to all environments.
 # Variables in this file will be overridden by each specific environment.
 # Shell variables never get overridden.
-# Name variables beginning with "REACT_APP_".
+# Name new variables beginning with "REACT_APP_".
 # Access variables from the "process.env." object.
 # Restart the development server every time you change a variable.
 # Learn more: https://create-react-app.dev/docs/adding-custom-environment-variables
 # Advanced config: https://create-react-app.dev/docs/advanced-configuration
 
-# Variable to resolve SASS imports.
+# Path to resolve SASS imports.
 # Ref: https://create-react-app.dev/docs/adding-a-sass-stylesheet
 SASS_PATH='./src/styles'
 
-# Add your own variables below, starting with REACT_APP_
+# Package Name and Version come from the package.json file.
+# They are used to render App Info in some places, for example
+# in the Storybook intro page, or in the App <title>.
 REACT_APP_PACKAGE_NAME=${npm_package_name}
 REACT_APP_PACKAGE_VERSION=${npm_package_version}
