--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -2,9 +2,13 @@
 # - "build:d"     Builds the App to `out/build/development`
 # - "sb-build:d"  Builds Storybook to `out/storybook/development`
 
-# Don't touch
-BUILD_PATH='./out/build/development'
+# The environment to build for
 REACT_APP_ENV='development'
+BUILD_PATH='./out/build/development'
 
-# Add variables below, starting with REACT_APP_
-REACT_APP_API_URL='http://development.com/api/v1'
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=true
+
+# The URL of the API server
+REACT_APP_API_URL='https://development.com/api/v1'
