--- a/.env-override/.env.local
+++ b/.env-override/.env.local
@@ -1,14 +1,20 @@
 # Variables in this file are injected by the following scripts:
-# - "start"       Runs the App in http://localhost:3000
-# - "start-https" Runs the App in https://localhost:3001 (HTTPS)
-# - "sbook"       Runs Storybook in http://localhost:3002
-# - "sbook-https" Runs Storybook in https://localhost:3003 (HTTPS)
+# - "start"       Runs the App in http://localhost:4000
+# - "sbook"       Runs Storybook in http://localhost:4002
 # - "build:l"     Builds the App to `out/build/local`
 # - "sb-build:l"  Builds Storybook to `out/storybook/local`
 
-# Don't touch
-BUILD_PATH='./out/build/local'
+# The environment to build for
 REACT_APP_ENV='local'
+BUILD_PATH='./out/build/local'
 
-# Add variables below, starting with REACT_APP_
-REACT_APP_API_URL='http://localhost:5000/api/v1'
+# Configures the app to run in HTTP mode
+HTTPS=false
+PORT=4000
+
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=true
+
+# The URL of the API server
+REACT_APP_API_URL='http://localhost:5001/api/v1'
