--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -2,9 +2,13 @@
 # - "build"     Builds the App to `out/build/production`
 # - "sb-build"  Builds Storybook to `out/storybook/production`
 
-# Don't touch
-BUILD_PATH='./out/build/production'
+# The environment to build for
 REACT_APP_ENV='production'
+BUILD_PATH='./out/build/production'
 
-# Add variables below, starting with REACT_APP_
-REACT_APP_API_URL='http://production.com/api/v1'
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=false
+
+# The URL of the API server
+REACT_APP_API_URL='https://production.com/api/v1'
