--- a/.env-override/.env.qa
+++ b/.env-override/.env.qa
@@ -2,9 +2,13 @@
 # - "build:q"     Builds the App to `out/build/qa`
 # - "sb-build:q"  Builds Storybook to `out/storybook/qa`
 
-# Don't touch
-BUILD_PATH='./out/build/qa'
+# The environment to build for
 REACT_APP_ENV='qa'
+BUILD_PATH='./out/build/qa'
 
-# Add variables below, starting with REACT_APP_
-REACT_APP_API_URL='http://qa.com/api/v1'
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=false
+
+# The URL of the API server
+REACT_APP_API_URL='https://qa.com/api/v1'
