--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -2,9 +2,13 @@
 # - "build:s"     Builds the App to `out/build/staging`
 # - "sb-build:s"  Builds Storybook to `out/storybook/staging`
 
-# Don't touch
-BUILD_PATH='./out/build/staging'
+# The environment to build for
 REACT_APP_ENV='staging'
+BUILD_PATH='./out/build/staging'
 
-# Add variables below, starting with REACT_APP_
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=false
+
+# The URL of the API server
 REACT_APP_API_URL='https://staging.com/api/v1'
