--- a/.env-override/.env.test
+++ b/.env-override/.env.test
@@ -1,8 +1,12 @@
 # Variables in this file are injected by the following scripts:
 # - "test" Executes Unit Tests outputting to `out/coverage`
 
-# Don't touch
+# The environment to build for
 REACT_APP_ENV='test'
 
-# Add variables below, starting with REACT_APP_
+# Lets you find common bugs in your components early during development.
+# Learn more: https://react.dev/reference/react/StrictMode
+REACT_APP_SCRICT_MODE=false
+
+# The URL of the API server
 REACT_APP_API_URL=='https://test.com/api/v1'
