Updated package scripts, removed airbnb

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,6 @@
   },
   "extends": [
     "eslint:recommended",
-    "airbnb",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
@@ -30,8 +29,6 @@
   "rules": {
     "@typescript-eslint/no-empty-function": "off",
     "comma-dangle": ["error", "always-multiline"],
-    "import/extensions": ["error", "ignorePackages", { "js": "never", "jsx": "never", "ts": "never", "tsx": "never" }],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "jsx-a11y/alt-text": "off",
     "max-len": ["error", { "code": 120, "tabWidth": 2, "ignoreComments": true, "ignoreTrailingComments": true, "ignoreUrls": true, "ignoreStrings": true, "ignoreTemplateLiterals": true, "ignoreRegExpLiterals": true }],
     "no-duplicate-imports": "error",
@@ -52,6 +49,9 @@
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
+    },
+    "react": {
+      "version": "detect"
     }
   }
 }
