Change react web vitals logic in index main file

--- a/.env-override/.env.development
+++ b/.env-override/.env.development
@@ -10,5 +10,9 @@ BUILD_PATH='./out/build/development'
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=true
 
+# Enables measuring performance in the App using Google Web Vitals.
+# Learn more:https://web.dev/vitals
+REACT_APP_REPORT_WEB_VITALS=true
+
 # The URL of the API server
 REACT_APP_API_URL='https://development.com/api/v1'
