--- a/.env-override/.env.https.local
+++ b/.env-override/.env.https.local
@@ -16,5 +16,9 @@ SSL_KEY_FILE=localhost-key.pem
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=true
 
+# Enables measuring performance in the App using Google Web Vitals.
+# Learn more:https://web.dev/vitals
+REACT_APP_REPORT_WEB_VITALS=true
+
 # The URL of the API server
 REACT_APP_API_URL='https://localhost:5000/api/v1'
