--- a/.env-override/.env.staging
+++ b/.env-override/.env.staging
@@ -10,5 +10,9 @@ BUILD_PATH='./out/build/staging'
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=false
 
+# Enables measuring performance in the App using Google Web Vitals.
+# Learn more:https://web.dev/vitals
+REACT_APP_REPORT_WEB_VITALS=false
+
 # The URL of the API server
 REACT_APP_API_URL='https://staging.com/api/v1'
