--- a/.env-override/.env.test
+++ b/.env-override/.env.test
@@ -8,5 +8,9 @@ REACT_APP_ENV='test'
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=false
 
+# Enables measuring performance in the App using Google Web Vitals.
+# Learn more:https://web.dev/vitals
+REACT_APP_REPORT_WEB_VITALS=false
+
 # The URL of the API server
 REACT_APP_API_URL=='https://test.com/api/v1'
