Updated comments in env files

--- a/.env-override/.env.production
+++ b/.env-override/.env.production
@@ -10,7 +10,7 @@ BUILD_PATH='./out/build/production'
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=false
 
-# Enables measuring performance in the App using Google Web Vitals.
+# Enables measuring performance in your App using Google Web Vitals.
 # Learn more:https://web.dev/vitals
 REACT_APP_REPORT_WEB_VITALS=false
 
