--- a/.env-override/.env.test
+++ b/.env-override/.env.test
@@ -8,7 +8,7 @@ REACT_APP_ENV='test'
 # Learn more: https://react.dev/reference/react/StrictMode
 REACT_APP_SCRICT_MODE=false
 
-# Enables measuring performance in the App using Google Web Vitals.
+# Enables measuring performance in your App using Google Web Vitals.
 # Learn more:https://web.dev/vitals
 REACT_APP_REPORT_WEB_VITALS=false
 
